--- a/msub.css
+++ b/msub.css
@@ -3,13 +3,22 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 #nav{
-    border:1px solid red;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
     display: flex;
     align-items: center;
     justify-content: space-around;
 }
 #nav>div>:last-child img{
     width: 60%;
+}
+#fas,button{
+    padding: 3px 4px;
+}
+#fas:hover,button:hover{
+ background-color: aliceblue;
+ cursor: pointer;
+ border: 1px solid ;
+ border-radius: 10px;
 }
 #nav>div{
     display: flex;
@@ -63,7 +72,7 @@
     text-align:center;
     margin-top: 10px;
 }
-input~button{
+form>input:last-child{
     font-size: 24px;
     padding: 6px 15px;
     margin-top: 27px;
@@ -101,7 +110,7 @@ input~button{
     margin-top: -40px;
     background-color: aliceblue;
 }
-#mi>div>img:hover{
+form>input:last-child:hover{
     color: #bbb;
     text-decoration: none;
     cursor: pointer;
