--- a/FAQ.css
+++ b/FAQ.css
@@ -9,10 +9,21 @@
     align-items: center;
     justify-content: space-evenly;
 }
-
+#hy,#mh,#Faq,button{
+    padding: 3px 4px;
+}
+#hy:hover,#mh:hover,#Faq:hover,button:hover{
+ background-color: aliceblue;
+ cursor: pointer;
+ border: 1px solid ;
+ border-radius: 10px;
+}
 section{
 min-height: 100vh;
 width: 80%;
+position: absolute;
+top: 60px;
+left: 140px;
 margin: 0 auto;
 display: flex;
 flex-direction: column;
