--- a/hsub.css
+++ b/hsub.css
@@ -3,7 +3,7 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 #nav{
-    border:1px solid red;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -15,6 +15,15 @@
     display: flex;
     gap:80px;
     align-items: center;
+}
+#fas,button{
+    padding: 3px 4px;
+}
+#fas:hover,button:hover{
+ background-color: aliceblue;
+ cursor: pointer;
+ border: 1px solid ;
+ border-radius: 10px;
 }
 #nav>div>div{
     align-items: center;
@@ -62,7 +71,7 @@
     text-align:center;
     margin-top: 10px;
 }
-input~button{
+form>input:last-child{
     font-size: 24px;
     padding: 6px 15px;
     margin-top: 27px;
@@ -105,7 +114,7 @@ input~button{
     text-decoration: none;
     cursor: pointer;
 }
-form>button:hover{
+form>input:last-child:hover{
     background-color: #bbb;
     color: black ;
     border: 1px solid ;
