--- a/index.css
+++ b/index.css
@@ -3,19 +3,28 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 #nav{
-    border:1px solid red;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
 }
-#top{
-    border: 1px solid blue;
+#hy,#mh,.fas,button{
+    padding: 3px 4px;
+}
+#hy:hover,#mh:hover,.fas:hover,button:hover{
+ background-color: aliceblue;
+ cursor: pointer;
+ border: 1px solid ;
+ border-radius: 10px;
 }
 #pt{
-    display: flex;
-    border: 1px solid;
-    height:60vh;
-    background-image: url(https://tse4.mm.bing.net/th?id=OIP.qUKrfxwZ7RiK3s3Q4Ms6sQHaE8&pid=Api&P=0);
+    width: 100%;
+    display: grid;
+    height: 500px;
+    place-items: center;
+    background-image: url(https://stimg.cardekho.com/images/uploadimages/1649418483823/reviews-cars-web.png);
+    background-size: 100% 100%;
+    animation: changeimage 20s linear infinite;
 }
  #box{
     border: 1px solid blue;
@@ -44,45 +53,45 @@
 }
 #middle>div{
     width:80%;
-    border:1px solid blue;
     margin: auto;
 }
 #mid,.mil{
-    border: 1px solid;
     display:flex;
     justify-content: space-around;
     align-items: center;
 }
+#mid img,#midd img{
+    border-radius: 10px;
+}
+
 #mi>div,#mid>div{
     width:30%;
-    border: 1px solid;
     border-radius: 5px;
 }
 #middle img{
     width:100%;
 }
 #middle>h3:first-child{
-    padding-top: 30px;
+    padding-top: 40px;
+    padding-bottom: 20px;
 }
 #middle>h3{
   margin-top: 40px;
   color: gray;
   margin-left: 150px;
+  padding-top: 30px;
   font-size: 24px;
 }
-#midd{
-    border: 1px solid;
+#middle>#midd{
     display:flex;
     justify-content: space-around;
     align-items: center;
+    margin-top: 20px;
 }
 #midd>div{
     width:22%;
-    border: 1px solid;
-    border-radius: 5px;
 }
 #mi{
-    border: 1px solid;
     display:flex;
     justify-content: space-around;
     align-items: center;
@@ -130,9 +139,12 @@
     padding: 15px;
     text-align: center;
 }
+#lower>div:hover{
+ border: 1px solid;
+ background-color: rgb(196, 196, 196);
+}
 #hell>div,#lower>div{
     width: 22%;
-    border: 1px solid;
     border-radius: 5px;
     padding: 10px;
     margin: 10px 10px;
@@ -181,7 +193,6 @@
 }
 #wer>div{
     width: 30%;
-    border: 1px solid ;
 }
 #wer>div:nth-child(2){
     line-height: 35px;
@@ -219,4 +230,21 @@ ul{
 }
 #foot>p{
     width: 90%;
+}
+@keyframes changeimage{
+    0%{
+       background-image: url(https://www.cars24.com/js/add769d31f2a340dc1ce173ff5a95adf.webp); 
+    }
+    25%{
+        background-image: url(https://stimg.cardekho.com/images/uploadimages/1652792525448/CD-1686x548-copy.png);
+    }
+    50%{
+        background-image: url(https://www.mychoize.com/imgs/banners/sliders/web-220630115126526715.jpg);
+    }
+    75%{
+        background-image: url(https://www.mychoize.com/imgs/banners/sliders/web-220630115152996117.jpg);
+    }
+    100%{
+        background-image: url(https://www.mychoize.com/imgs/banners/sliders/web-220630010554572179.jpg);
+    }
 }
